force-app/main/default/objects/NS_QueueSetting__mdt/NS_QueueSetting__mdt.object-meta.xml
<CustomObject>
    <description>This is to capture Case Queue and Business Unit relation</description>
    <label>Queue Setting</label>
    <pluralLabel>Queue Settings</pluralLabel>
</CustomObject>