force-app/main/default/objects/NS_QueueSetting__mdt/fields/NS_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_BusinessUnit__c</fullName>
    <description>If owner is a Queue, please select the Business Unit of corresponding Queue</description>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
                <default>true</default>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>Intermodal Premium</fullName>
            </value>
            <value>
                <fullName>Intermodal Non-Premium</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Traffic</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Demurrage</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>