force-app/main/default/objects/NS_QueueSetting__mdt/fields/NS_ManagerQueue__c.field-meta.xml
<CustomField>
    <fullName>NS_ManagerQueue__c</fullName>
    <description>Name of the Queue for Escalated Cases</description>
    <label>Manager&#39;s Queue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>