force-app/main/default/objects/NS_QueueSetting__mdt/fields/NS_RoutingEmail__c.field-meta.xml
<CustomField>
    <fullName>NS_RoutingEmail__c</fullName>
    <description>Email Service Address</description>
    <label>Routing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>