force-app/main/default/objects/NS_QueueSetting__mdt/listViews/NS_AllQueueSettings.listView-meta.xml
<ListView>
    <fullName>NS_AllQueueSettings</fullName>
    <columns>MasterLabel</columns>
    <columns>NS_BusinessUnit__c</columns>
    <columns>NS_ManagerQueue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Queue Settings</label>
</ListView>